--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="O'yin natijalari:"
+        android:text="Sizning natijangiz:"
         style="@style/titleStyle"/>
 
     <LinearLayout
@@ -104,10 +104,10 @@
 
     <Button
         android:id="@+id/btn_boshlash"
+        style="@style/buttonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="boshlash"
-        style="@style/buttonStyle"/>
+        android:text="restart" />
 
 </RelativeLayout>
