--- a/app/src/main/res/layout/game_start_activity.xml
+++ b/app/src/main/res/layout/game_start_activity.xml
@@ -37,7 +37,7 @@
         <Button
             android:id="@+id/btn_finish"
             android:layout_alignParentBottom="true"
-            android:text="finish"
+            android:text="tugatish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -46,7 +46,7 @@
             android:layout_marginEnd="10dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:text="next"
+            android:text="keyingisi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
